Refactor PaymentGateway and add retry policy
Refactor PaymentGateway and PaymentOrchestrator to improve structure and add retry policy for payment attempts.